added diff. dfs

--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -36,6 +36,7 @@
     "|CarryAway|n4~8, 1~3, gt8, less1, never | how many times do you get take-away food every month?)|\n",
     "|RestaurantLessThan20| 4~8, 1~3, less1, gt8, never | how many times do you go to a restaurant with an average expense per person of less than $20 every month?)|\n",
     "|Restaurant20To50| 1~3, less1, never, gt8, 4~8, nan | how many times do you go to a restaurant with average expense per person of $20 - $50 every month?)|\n",
+    "|toCoupon_GEQ5min|0,1|driving distance to the restaurant/bar for using the coupon is greater than 5 minutes|\n",
     "|toCoupon_GEQ15min|0,1 | driving distance to the restaurant/bar for using the coupon is greater than 15 minutes)|\n",
     "|toCoupon_GEQ25min|0, 1 | driving distance to the restaurant/bar for using the coupon is greater than 25 minutes)|\n",
     "|direction_same|0, 1 | whether the restaurant/bar is in the same direction as your current destination)|\n",
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +288,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +308,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['temperature'] = df['temperature'].astype(object)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +332,7 @@
       " 0   destination           12684 non-null  object\n",
       " 1   passanger             12684 non-null  object\n",
       " 2   weather               12684 non-null  object\n",
-      " 3   temperature           12684 non-null  int64 \n",
+      " 3   temperature           12684 non-null  object\n",
       " 4   time                  12684 non-null  object\n",
       " 5   coupon                12684 non-null  object\n",
       " 6   expiration            12684 non-null  object\n",
@@ -345,7 +355,7 @@
       " 23  direction_same        12684 non-null  int64 \n",
       " 24  direction_opp         12684 non-null  int64 \n",
       " 25  Y                     12684 non-null  int64 \n",
-      "dtypes: int64(8), object(18)\n",
+      "dtypes: int64(7), object(19)\n",
       "memory usage: 2.5+ MB\n"
      ]
     }
@@ -366,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +411,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +443,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +489,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -595,13 +605,121 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Various Data Cleaning\n",
+    "\n",
+    "Impute</br>\n",
+    "1. mode\n",
+    "2. nan -> negative\n",
+    "\n",
+    "--> cols with nan values : car, Bar, CoffeeHouse, CarryAway, RestaurantLessThan20, Restaurant20To50\n",
+    "\n",
+    "Data Types </br>\n",
+    "1. all categorical\n",
+    "2. categorical + ordinal\n",
+    "\n",
+    "--> ordinal : temperature, time, expiration, age, income, CarryAway, [RestaurantLessThan20 + Restaurant20To50], [toCoupon_GEQ5min + toCoupon_GEQ15min + toCoupon_GEQ25min]\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fillnull(col):\n",
+    "    col.fillna(col.value_counts().index[0], inplace=True)\n",
+    "    return col\n",
+    "\n",
+    "df1 = df.copy() # mode / all categorical\n",
+    "df2 = df.copy() # mode / cate + ordinal\n",
+    "df3 = df.copy() # nan / all categorical\n",
+    "df4 = df.copy() # nan / cate + ordinal --> not possible SO\n",
+    "\n",
+    "df1=df1.apply(lambda col:fillnull(col))\n",
+    "df2=df2.apply(lambda col:fillnull(col))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/jr/hf7j6j5x2yn3f7mvrb4x6xnh0000gn/T/ipykernel_12870/3672439029.py:8: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
+      "  df1 = pd.concat([df1['Y'], pd.get_dummies(df1[ohe_col])],axis=1) #finished\n",
+      "/var/folders/jr/hf7j6j5x2yn3f7mvrb4x6xnh0000gn/T/ipykernel_12870/3672439029.py:9: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
+      "  df3 = pd.concat([df3['Y'], pd.get_dummies(df3[ohe_col],dummy_na=True)],axis=1) # finished\n"
+     ]
+    }
+   ],
+   "source": [
+    "ohe_col = ['destination', 'passanger', 'weather', 'temperature', 'time', 'coupon',\n",
+    "       'expiration', 'gender', 'age', 'maritalStatus', 'has_children',\n",
+    "       'education', 'occupation', 'income', 'car', 'Bar', 'CoffeeHouse',\n",
+    "       'CarryAway', 'RestaurantLessThan20', 'Restaurant20To50',\n",
+    "       'toCoupon_GEQ5min', 'toCoupon_GEQ15min', 'toCoupon_GEQ25min',\n",
+    "       'direction_same', 'direction_opp']\n",
+    "\n",
+    "df1 = pd.concat([df1['Y'], pd.get_dummies(df1[ohe_col])],axis=1) #finished\n",
+    "df3 = pd.concat([df3['Y'], pd.get_dummies(df3[ohe_col],dummy_na=True)],axis=1) # finished"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ord_col = [\"temperature\", \"time\", \"expiration\", \"age\", \"income\", \"CarryAway\", \"RestaurantLessThan20\", \"Restaurant20To50\"]\n",
+    "temp = {30:0, 50:1, 80:2}\n",
+    "time = {'7AM':0, \"10AM\":1, \"2PM\":2, \"6PM\":3, \"10PM\":4}\n",
+    "exp = {\"1d\":0, \"2h\":1 }\n",
+    "age = {\"below21\":0, \"21\":1, \"26\":2, \"31\":3, \"36\":4, \"41\":5, \"46\":6, \"50plus\":7 }\n",
+    "inc = {'Less than $12500':0,'$12500 - $24999':1,'$25000 - $37499':2,'$37500 - $49999':3, '$50000 - $62499':4, '$62500 - $74999':5,'$75000 - $87499':6,'$87500 - $99999':7,'$100000 or More':8}\n",
+    "ca = {'never':0 ,'less1':1, '1~3':2, '4~8':3, 'gt8':4}\n",
+    "restless20 = {'never': 0, 'less1':1, '1~3':2, '4~8':3, 'gt8':4}\n",
+    "rest20to50 = {'never':0, 'less1':1, '1~3': 2, '4~8':3, 'gt8':4}\n",
+    "\n",
+    "ord_repl = [temp, time, exp, age, inc, ca, restless20, rest20to50]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#  <5 , 5-15, 15-25, >25\n",
+    "df2['toCoupon_GEQ'] = np.where(((df2.toCoupon_GEQ5min==0) & (df2.toCoupon_GEQ15min==0) & (df2.toCoupon_GEQ25min==0)), 0, \\\n",
+    "                     np.where(((df2.toCoupon_GEQ5min==1) & (df2.toCoupon_GEQ15min==0) & (df2.toCoupon_GEQ25min==0)), 1, \\\n",
+    "                     np.where(((df2.toCoupon_GEQ5min==1) & (df2.toCoupon_GEQ15min==1) & (df2.toCoupon_GEQ25min==0)), 2, \\\n",
+    "                     np.where(((df2.toCoupon_GEQ5min==1) & (df2.toCoupon_GEQ15min==1) & (df2.toCoupon_GEQ25min==1)), 3, None))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(len(ord_col)):\n",
+    "    df2[ord_col[i]].replace(ord_repl[i],inplace=True) #finished"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# could try chi-square test for correlation between categorical vars"
-   ]
+   "source": []
   }
  ],
  "metadata": {
