--- a/EDA.ipynb
+++ b/EDA.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,10 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import math"
+    "import math\n",
+    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -288,7 +291,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +414,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +446,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -489,7 +492,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +520,7 @@
        "(0.4315673289183223, 0.5684326710816777)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -547,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -558,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -582,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -627,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -646,20 +649,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/jr/hf7j6j5x2yn3f7mvrb4x6xnh0000gn/T/ipykernel_12870/3672439029.py:8: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
-      "  df1 = pd.concat([df1['Y'], pd.get_dummies(df1[ohe_col])],axis=1) #finished\n",
-      "/var/folders/jr/hf7j6j5x2yn3f7mvrb4x6xnh0000gn/T/ipykernel_12870/3672439029.py:9: FutureWarning: In a future version, the Index constructor will not infer numeric dtypes when passed object-dtype sequences (matching Series behavior)\n",
-      "  df3 = pd.concat([df3['Y'], pd.get_dummies(df3[ohe_col],dummy_na=True)],axis=1) # finished\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "ohe_col = ['destination', 'passanger', 'weather', 'temperature', 'time', 'coupon',\n",
     "       'expiration', 'gender', 'age', 'maritalStatus', 'has_children',\n",
@@ -674,11 +666,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ord_col = [\"temperature\", \"time\", \"expiration\", \"age\", \"income\", \"CarryAway\", \"RestaurantLessThan20\", \"Restaurant20To50\"]\n",
+    "ord_col = [\"temperature\", \"time\", \"expiration\", \"age\", \"income\", \"CarryAway\", \"RestaurantLessThan20\", \"Restaurant20To50\", \"Bar\", \"CoffeeHouse\"]\n",
     "temp = {30:0, 50:1, 80:2}\n",
     "time = {'7AM':0, \"10AM\":1, \"2PM\":2, \"6PM\":3, \"10PM\":4}\n",
     "exp = {\"1d\":0, \"2h\":1 }\n",
@@ -687,13 +679,15 @@
     "ca = {'never':0 ,'less1':1, '1~3':2, '4~8':3, 'gt8':4}\n",
     "restless20 = {'never': 0, 'less1':1, '1~3':2, '4~8':3, 'gt8':4}\n",
     "rest20to50 = {'never':0, 'less1':1, '1~3': 2, '4~8':3, 'gt8':4}\n",
+    "bar = {'never':0, 'less1':1, '1~3': 2, '4~8':3, 'gt8':4}\n",
+    "coffee_house = {'never':0, 'less1':1, '1~3': 2, '4~8':3, 'gt8':4}\n",
     "\n",
-    "ord_repl = [temp, time, exp, age, inc, ca, restless20, rest20to50]"
+    "ord_repl = [temp, time, exp, age, inc, ca, restless20, rest20to50, bar, coffee_house]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,17 +695,96 @@
     "df2['toCoupon_GEQ'] = np.where(((df2.toCoupon_GEQ5min==0) & (df2.toCoupon_GEQ15min==0) & (df2.toCoupon_GEQ25min==0)), 0, \\\n",
     "                     np.where(((df2.toCoupon_GEQ5min==1) & (df2.toCoupon_GEQ15min==0) & (df2.toCoupon_GEQ25min==0)), 1, \\\n",
     "                     np.where(((df2.toCoupon_GEQ5min==1) & (df2.toCoupon_GEQ15min==1) & (df2.toCoupon_GEQ25min==0)), 2, \\\n",
-    "                     np.where(((df2.toCoupon_GEQ5min==1) & (df2.toCoupon_GEQ15min==1) & (df2.toCoupon_GEQ25min==1)), 3, None))))"
+    "                     np.where(((df2.toCoupon_GEQ5min==1) & (df2.toCoupon_GEQ15min==1) & (df2.toCoupon_GEQ25min==1)), 3, None))))\n",
+    "df2.drop(columns=['toCoupon_GEQ15min', 'toCoupon_GEQ25min', 'toCoupon_GEQ5min'], inplace=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
     "for i in range(len(ord_col)):\n",
     "    df2[ord_col[i]].replace(ord_repl[i],inplace=True) #finished"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cat_col = df2.columns.difference(ord_col + ['toCoupon_GEQ','Y'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dummies = pd.get_dummies(df2[cat_col])\n",
+    "df2 = pd.concat([df2, dummies],axis=1)\n",
+    "df2.drop(columns=cat_col,inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['temperature', 'time', 'expiration', 'age', 'income', 'Bar',\n",
+       "       'CoffeeHouse', 'CarryAway', 'RestaurantLessThan20', 'Restaurant20To50',\n",
+       "       'Y', 'toCoupon_GEQ', 'car_Car that is too old to install Onstar :D',\n",
+       "       'car_Mazda5', 'car_Scooter and motorcycle', 'car_crossover',\n",
+       "       'car_do not drive', 'coupon_Bar', 'coupon_Carry out & Take away',\n",
+       "       'coupon_Coffee House', 'coupon_Restaurant(20-50)',\n",
+       "       'coupon_Restaurant(<20)', 'destination_Home',\n",
+       "       'destination_No Urgent Place', 'destination_Work', 'direction_opp_0',\n",
+       "       'direction_opp_1', 'direction_same_0', 'direction_same_1',\n",
+       "       'education_Associates degree', 'education_Bachelors degree',\n",
+       "       'education_Graduate degree (Masters or Doctorate)',\n",
+       "       'education_High School Graduate', 'education_Some High School',\n",
+       "       'education_Some college - no degree', 'gender_Female', 'gender_Male',\n",
+       "       'has_children_0', 'has_children_1', 'maritalStatus_Divorced',\n",
+       "       'maritalStatus_Married partner', 'maritalStatus_Single',\n",
+       "       'maritalStatus_Unmarried partner', 'maritalStatus_Widowed',\n",
+       "       'occupation_Architecture & Engineering',\n",
+       "       'occupation_Arts Design Entertainment Sports & Media',\n",
+       "       'occupation_Building & Grounds Cleaning & Maintenance',\n",
+       "       'occupation_Business & Financial',\n",
+       "       'occupation_Community & Social Services',\n",
+       "       'occupation_Computer & Mathematical',\n",
+       "       'occupation_Construction & Extraction',\n",
+       "       'occupation_Education&Training&Library',\n",
+       "       'occupation_Farming Fishing & Forestry',\n",
+       "       'occupation_Food Preparation & Serving Related',\n",
+       "       'occupation_Healthcare Practitioners & Technical',\n",
+       "       'occupation_Healthcare Support',\n",
+       "       'occupation_Installation Maintenance & Repair', 'occupation_Legal',\n",
+       "       'occupation_Life Physical Social Science', 'occupation_Management',\n",
+       "       'occupation_Office & Administrative Support',\n",
+       "       'occupation_Personal Care & Service',\n",
+       "       'occupation_Production Occupations', 'occupation_Protective Service',\n",
+       "       'occupation_Retired', 'occupation_Sales & Related',\n",
+       "       'occupation_Student', 'occupation_Transportation & Material Moving',\n",
+       "       'occupation_Unemployed', 'passanger_Alone', 'passanger_Friend(s)',\n",
+       "       'passanger_Kid(s)', 'passanger_Partner', 'weather_Rainy',\n",
+       "       'weather_Snowy', 'weather_Sunny'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.columns"
    ]
   },
   {
