final adjustments to file imports to address dir changes

--- a/modeling/modeling_final.ipynb
+++ b/modeling/modeling_final.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,6 +23,8 @@
     "from catboost import CatBoostClassifier\n",
     "import shap\n",
     "\n",
+    "import sys\n",
+    "sys.path.append('../src/')\n",
     "import model_pipeline"
    ]
   },
