--- a/data/data_transformation.ipynb
+++ b/data/data_transformation.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/in-vehicle-coupon-recommendation.csv\")\n",
+    "df = pd.read_csv(\"in-vehicle-coupon-recommendation.csv\")\n",
     "df['temperature'] = df['temperature'].astype(object)"
    ]
   },
